# Ai_agents

./: .gitignore  README.md  pyproject.toml  requirements.txt  scrapper.py
mcp/: requirements.txt  server.py
projects/: .gitignore  deep_agent.py  deep_research.py  github_agent.py  notion_agent.py  podcast.py  rag.py  requirements.txt  scraper.py  scrapper.py  stock.py  stockResearch.py
projects/agentic_rag/: rag.py
projects/deep_agent/: app.py  prompts.py  state.py  tools.py
projects/github/: github_agent.py
projects/notion/: notion.py  prompts.py  tools.py
projects/orchestration_workers/: app.py
projects/podcast/: podcast.py  prompts.py
projects/scraper/: prompts.py  scraper.py  tools.py
projects/stock/: prompts.py  stock.py  tools.py
projects/supervisor/: app.py  prompts.py
projects/travel/: app.py
src/ai_agents/: __init__.py  cli.py
src/ai_agents/config/: __init__.py  settings.py
src/ai_agents/core/: base.py  registry.py  schemas.py
website/app/: layout.tsx  page.tsx
website/components/layout/: Footer.tsx  Navbar.tsx
website/features/homepage/: Cta.tsx  Features.tsx  Hero.tsx  HowItWorks.tsx  Marquee.tsx  Testimonials.tsx
